deploy/src/Microsoft.Azure.IIoT.Deployment/Resources/aks/50_industrial_iot_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: industrial-iot-ingress
  namespace: industrial-iot
  labels:
    app.kubernetes.io/name: industrial-iot-ingress
    app.kubernetes.io/part-of: industrial-iot
    app.kubernetes.io/version: 2.6.104
    app.kubernetes.io/managed-by: Microsoft.Azure.IIoT.Deployment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
    nginx.ingress.kubernetes.io/session-cookie-name: affinity
spec:
  rules:
  - http:
      paths:
      - path: /registry/
        backend:
          serviceName: registry-service
          servicePort: 9042
      - path: /twin/
        backend:
          serviceName: twin-service
          servicePort: 9041
      - path: /history/
        backend:
          serviceName: history-service
          servicePort: 9043
      - path: /ua/
        backend:
          serviceName: gateway-service
          servicePort: 9040
      - path: /vault/
        backend:
          serviceName: vault-service
          servicePort: 9044
      - path: /onboarding/
        backend:
          serviceName: onboarding-service
          servicePort: 9060
      - path: /publisher/
        backend:
          serviceName: publisher-service
          servicePort: 9045
      - path: /jobs/
        backend:
          serviceName: publisher-jobs-service
          servicePort: 9046
      - path: /configuration/
        backend:
          serviceName: configuration-service
          servicePort: 9050
      - path: /edge/jobs/
        backend:
          serviceName: edge-jobs-service
          servicePort: 9051
      - path: /edge/manage/
        backend:
          serviceName: edge-manager-service
          servicePort: 9047
      - path: /frontend/
        backend:
          serviceName: engineering-tool-service
          servicePort: 80
